# MPC-Spec

./: .gitignore  00-overview.md  01-cggmp24-pin.md  02-execution-id.md  03-brc42-invoice.md  04-session-id.md  05-message-envelope.md  06-transport.md  07-brc31-auth.md  08-identity.md  09-policy.md  10-audit.md  11-fees.md  12-discovery.md  13-federation.md  14-conformance-tests.md  15-notary-product.md  16-operations.md  17-supply-chain.md  18-recovery.md  CHANGES-PROPOSED.md  CONTRIBUTING.md  DESIGN.md  LICENSE  OPEN-QUESTIONS.md  PARTNERSHIP-PLAYBOOK.md  PROPOSAL.md  README.md  ROADMAP.md  STATUS.md
appendices/: README.md
conformance/: README.md
conformance/test-vectors/scripts/cross_validate_rs/: Cargo.toml
conformance/test-vectors/scripts/cross_validate_rs/src/: main.rs
decisions/: 0001-cggmp24-pin-past-cve-2025.md  0002-brc42-canonicalization-lowercase-trim.md  0003-canonical-execution-id.md  0004-canonical-session-id.md  0005-canonical-message-envelope.md  0006-federated-messagebox-with-websocket.md  0016-v1-ops-topology-no-tee-no-hsm.md  0019-sth-pushdrop-chain.md  0020-versioning-policy.md  0030-presig-coordinator-storage.md  0031-sign-time-confirmation-contract.md  0032-approval-quorum-request-view-hash.md  0033-discovery-display-contract.md  0034-state-visibility-ux-contract.md  0035-sdk-v1-1-listSignedActions-approve.md  0036-cost-claim-conditional-scoping.md  0037-cbor-re-encode-equivalence.md  0038-memory-hard-recovery-kdf.md  0039-sth-multi-source-cross-check.md  0040-continuous-runtime-self-attestation.md  0041-network-profile-latency-budgets.md  (+10 more)
(+17 files in other folders)
