[package]
name = "mpc-spec-cross-validate"
version = "0.1.0"
edition = "2021"
publish = false

# This is a standalone Cargo project (NOT part of the bsv-mpc/rust-mpc
# workspaces) so it can be cross-validated against the spec independently
# of either implementation. It re-derives the formulas from §02/§03/§04/§05
# using primitive crates only.

[dependencies]
sha2 = "0.10"
hmac = "0.12"
k256 = { version = "0.13", features = ["arithmetic"] }
serde_json = "1"
ciborium = "0.2"
hex = "0.4"

[[bin]]
name = "cross-validate"
path = "src/main.rs"

[workspace]
